--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -14,7 +14,7 @@
     <!-- header -->
     <div class="header">
         <div class="logoImage">
-            <a href="#"><img src="#" style="width:158px;"></a>
+            <a href="#"><img src="../../static/image/logo.png"></a>
         </div>
         <div class="title">
             <div>
