--- a/src/main/resources/templates/admin/floging.html
+++ b/src/main/resources/templates/admin/floging.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <div class="header">
         <div class="logoImage">
-            <a href="#"><img src="#" style="width:158px;"></a>
+            <a href="#"><img src="../../static/image/logo.png"></a>
         </div>
         <div class="title">
             <div>
@@ -102,7 +102,7 @@
                             <td>16/30</td>
                             <!--신청중,모집중,모집종료,기각),신청중 상태에서만 버튼으로 만들어 신청서 볼수 있게 만들기 -->
                             <td>모집중</td>
-                            <td><a href="floging-register.html"><button type="button" class = "register-detail-btn">상세보기</button></a></td>
+                            <td><a href="./floging-detail.html"><button type="button" class = "register-detail-btn">상세보기</button></a></td>
 
                         </tr>
                         <tr>
@@ -114,8 +114,9 @@
                             <td>완주시 휴지 1롤</td>
                             <td>0/30</td>
                             <!--신청중,모집중,모집종료,기각),신청중 상태에서만 버튼으로 만들어 신청서 볼수 있게 만들기 -->
-                            <td>심사 대기</td>
-                            <td><a href="floging-register.html"><button type="button" class = "register-detail-btn">상세보기</button></a></td>
+                            <td><a href="floging-estimate.html"><button type="button" class = "register-estimate-btn">심사 대기</button></a></td>
+
+                            <td><a href="floging-detail.html"><button type="button" class = "register-detail-btn">상세보기</button></a></td>
 
                         </tr>
                         </thead>
