--- a/src/main/resources/templates/admin/notice-update-form.html
+++ b/src/main/resources/templates/admin/notice-update-form.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <div class="header">
         <div class="logoImage">
-            <a href="#"><img src="#" style="width:158px;"></a>
+            <a href="#"><img src="../../static/image/logo.png"></a>
         </div>
         <div class="title">
             <div>
@@ -50,7 +50,7 @@
             <div class="content-wrap">
 
                 <!-- [S] 공지사항 등록 -->
-                <form action="./notice.html" method="post" enctype="multipart/form-data">
+                <form action="./notice.html" method="post" class="submit-form">
                     <div class="con-write-wrap">
                         <div class="notice-write">
                             <div class="write-title">공지사항 제목</div>
@@ -87,7 +87,7 @@
                     <!-- 작성하기 btn -->
                     <div class="write-btn-wrap">
                         <button type="button" class="btn btn-list"><a href="./notice.html">공지 사항</a></button>
-                        <button type="submit" class="btn btn-write">수정하기</button>
+                        <button type="button" class="btn btn-write">수정하기</button>
                     </div>
                 </form>
 
@@ -105,6 +105,6 @@
 
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/admin/sumnail.js"></script>
 <script src="../../static/js/admin/side-bar.js"></script>
+<script src="../../static/js/admin/notice-form.js"></script>
 </html>
