--- a/src/main/resources/templates/admin/qna.html
+++ b/src/main/resources/templates/admin/qna.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <div class="header">
         <div class="logoImage">
-            <a href="#"><img src="#" style="width:158px;"></a>
+            <a href="#"><img src="../../static/image/logo.png"></a>
         </div>
         <div class="title">
             <div>
@@ -93,8 +93,8 @@
                             <td>휴지가 너무 적어요</td>
                             <td>지존동석</td>
                             <td>2000-09-03</td>
-                            <td>답변 대기</td>
-                            <td><a href="./qna-form.html"><button type="button" class = "response-btn">답변하기</button></a></td>
+                            <td><a href="./qna-form.html"><button type="button" class = "register-estimate-btn">답변 대기</button></a></td>
+                            <td><a href="qna-update.html"><button type="button" class = "register-detail-btn">상세 보기</button></a></td>
                         </tr>
                         </thead>
 
