--- a/src/main/resources/templates/header-footer/footer.html
+++ b/src/main/resources/templates/header-footer/footer.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="../../static/css/header-footer/footer.css" rel="stylesheet">
+    <link href="../../static/css/notice/notice.css" rel="stylesheet">
+    <link href="../../static/css/font.css" rel="stylesheet">
 </head>
 
 <body>
@@ -138,4 +140,5 @@
     </div>
 </footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </html>
