--- a/src/main/resources/templates/header-footer/header-login.html
+++ b/src/main/resources/templates/header-footer/header-login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="../../static/css/header-footer/header.css" rel="stylesheet">
+    <link href="../../static/css/header-footer/header-login.css" rel="stylesheet">
     <link href="../../static/css/notice/notice.css" rel="stylesheet">
     <link href="../../static/css/font.css" rel="stylesheet">
 
@@ -34,32 +35,66 @@
                         <div class="css-1o64euu">
                             <div id="global-search-combobox" role="combobox" aria-expanded="false"
                                  aria-haspopup="listbox" class="css-7whenc">
-                                <div class="css-1yhxgcl"><span class="_search_24 css-hkiqzb"></span><input
-                                        type="text" value="" placeholder="통합검색" autocomplete="off"
-                                        aria-autocomplete="list" class="css-1pneado ej5pc7c2">
+                                <div class="css-1yhxgcl"><span class="_search_24 css-hkiqzb"></span><input type="text"
+                                                                                                           value=""
+                                                                                                           placeholder="통합검색"
+                                                                                                           autocomplete="off"
+                                                                                                           aria-autocomplete="list"
+                                                                                                           class="css-1pneado ej5pc7c2">
                                     <div class="css-s5xdrg"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="css-t6whf">
-                            <button type="button" class="css-oh9y0"><span class="_search_24 css-cwcsvq"></span>
-                            </button>
+                            <button type="button" class="css-oh9y0"><span class="_search_24 css-cwcsvq"></span></button>
                         </div>
-
+                        <div class="css-ff3m79"><a aria-label="스크랩북 페이지 링크 버튼" class="css-xh0ic1"
+                                                   href="/users/20617160/collections"><span
+                                class="_scrap_outline_24 css-17vaqfq"></span></a></div>
+                        <div class="css-ff3m79"><a aria-label="내소식 페이지 링크 버튼" class="css-xh0ic1"
+                                                   href="/notifications/feed"><span
+                                class="_notification_outline_24 css-17vaqfq"></span></a></div>
+                        <a aria-label="장바구니 페이지 링크 버튼" class="css-xh0ic1" href="/cart"><span
+                                class="_cart_24 css-17vaqfq"></span></a>
                         <div class="css-1f624s9">
-                            <div class="css-1kpxvh4"><a class="css-1g5o6hv"
-                                                        href="/users/sign_in?redirect_to=%2Fcustomer_notices">로그인</a><a
-                                    class="css-1g5o6hv" href="/normal_users/new">회원가입</a><a class="css-1tlac5g"
-                                                                                            href="/customer_center">공지사항</a>
+                            <div class="css-1fi7j8"><span class="css-1amee4m"><button type="button" aria-label="프로필 메뉴"
+                                                                                      class="css-lnqfmk mypage-btn"><picture><source
+                                    src="https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?w=72&amp;h=72&amp;c=c&amp;webp=1"
+                                    srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?w=144&amp;h=144&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?w=144&amp;h=144&amp;c=c&amp;webp=1 3x"
+                                    type="image/webp"><img alt="프로필 사진" class="css-xnm8en"
+                                                           src="https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?w=72&amp;h=72&amp;c=c"
+                                                           srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?w=72&amp;h=72&amp;c=c 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?w=144&amp;h=144&amp;c=c 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?w=144&amp;h=144&amp;c=c 3x"></picture></button></span>
+                                <div class="placement-bottom css-kqp0ar open open-active mypage"
+                                     style="position: absolute; inset: 10px auto auto 0px; transform: translate3d(960.667px, 58.6667px, 0px); display: none;"
+                                     data-popper-reference-hidden="false" data-popper-escaped="false"
+                                     data-popper-placement="bottom">
+                                    <div class="popper-item css-y2j1wi">
+                                        <div class="css-dyue77"><a class="css-1rvuwiz" href="/users/20617160">마이페이지
+                                            <svg class="css-1dnrp50" fill="none" xmlns="http://www.w3.org/2000/svg"
+                                                 viewBox="0 0 18 18" width="18" height="18">
+                                                <path d="M0 9a9 9 0 1118 0A9 9 0 010 9z" fill="#fff"></path>
+                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                      d="M9 18A9 9 0 109 0a9 9 0 000 18zm-1.7-5.25H5.26v-7.5h2.61l2.8 4.2h.03v-4.2h2.06v7.5h-2.3L7.36 8.07h-.05v4.68z"
+                                                      fill="#F77"></path>
+                                            </svg>
+                                        </a><a class="css-1rvuwiz" href="/user_shopping_pages/order_list">나의 쿠폰</a><a
+                                                class="css-1rvuwiz" href="/competitions/feed">내 플로깅 목록</a><a
+                                                class="css-1rvuwiz"
+                                                href="https://pro.ohou.se?utm_source=ohouse&amp;utm_medium=web&amp;utm_campaign=prosignup&amp;utm_content=myhome">내 후기 목록
+                                            </a><a class="css-1rvuwiz"
+                                                     href="https://partners.ohou.se/partner/applications/new">포인트 내역</a><a
+                                                class="css-1rvuwiz" href="/customer_center">공지사항</a>
+                                            <button type="button" class="css-1rvuwiz">로그아웃</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <span class="css-1amee4m"><button type="button" class="css-duxp2y write-btn"><span
-                                    class="css-cdruys">글쓰기</span><span
+                            <span class="css-1amee4m"><button type="button" class="css-duxp2y write-btn"><span class="css-cdruys">글쓰기</span><span
                                     class="_chevron_down_18 css-ae93ov"></span></button></span>
-
                             <div class="placement-bottom css-kqp0ar open open-active writes"
-                                 style="position: absolute; inset: 0px auto auto 0px; transform: translate3d(978.667px, 70px, 0px); display: none;"
                                  data-popper-reference-hidden="false" data-popper-escaped="false"
-                                 data-popper-placement="bottom">
+                                 data-popper-placement="bottom"
+                                 style="position: absolute; inset: 0px auto auto 0px; transform: translate3d(978.667px, 70px, 0px);display: none;">
                                 <div class="popper-item css-y2j1wi"><a class="css-1n4nww"
                                                                        href="/contents/card_collections/new">
                                     <div class="css-bjn8wh">
