--- a/src/main/resources/templates/mypage/users-edit-password.html
+++ b/src/main/resources/templates/mypage/users-edit-password.html
@@ -79,14 +79,14 @@
                 <path fill="#FFF" d="M9.42 11.98l-.25-4.43-.06-1.67h1.78l-.06 1.67-.25 4.43H9.42zm.58 3.19c-.62 0-1.1-.5-1.1-1.15 0-.65.48-1.16 1.1-1.16.62 0 1.1.5 1.1 1.16 0 .64-.48 1.15-1.1 1.15z"></path>
                 </svg>`
         if (password === "") {
-            $(".expert-form-group__error").eq(0).html(error+"필수 입력 항목입니다.");
-            $(".form-control").eq(0).addClass('error');
+            $(".expert-productForm-group__error").eq(0).html(error+"필수 입력 항목입니다.");
+            $(".productForm-control").eq(0).addClass('error');
         } else if (!regex.test(password)) {
-            $(".expert-form-group__error").eq(0).html(error+"비밀번호는 영문, 숫자를 포함하여 8자 이상이어야 합니다.");
-            $(".form-control").eq(0).addClass('error');
+            $(".expert-productForm-group__error").eq(0).html(error+"비밀번호는 영문, 숫자를 포함하여 8자 이상이어야 합니다.");
+            $(".productForm-control").eq(0).addClass('error');
         } else {
-            $(".expert-form-group__error").eq(0).html("");
-            $(".form-control").eq(0).removeClass('error');
+            $(".expert-productForm-group__error").eq(0).html("");
+            $(".productForm-control").eq(0).removeClass('error');
         }
     });
 
@@ -98,22 +98,22 @@
                 <path fill="#FFF" d="M9.42 11.98l-.25-4.43-.06-1.67h1.78l-.06 1.67-.25 4.43H9.42zm.58 3.19c-.62 0-1.1-.5-1.1-1.15 0-.65.48-1.16 1.1-1.16.62 0 1.1.5 1.1 1.16 0 .64-.48 1.15-1.1 1.15z"></path>
                 </svg>`
         if (password != ckpw) {
-            $(".expert-form-group__error").eq(1).html(error+"비밀번호가 일치하지 않습니다.");
-            $(".form-control").eq(1).addClass('error');
+            $(".expert-productForm-group__error").eq(1).html(error+"비밀번호가 일치하지 않습니다.");
+            $(".productForm-control").eq(1).addClass('error');
         } else {
-            $(".expert-form-group__error").eq(1).html("");
-            $(".form-control").eq(1).removeClass('error');
+            $(".expert-productForm-group__error").eq(1).html("");
+            $(".productForm-control").eq(1).removeClass('error');
         }
     });
 
     $(".update-password__submit").submit(function(){
         let ck=true;
-        if($(".expert-form-group__error").eq(0).hasclass('error')){
-            $(".expert-form-group__error").eq(0).focus();
+        if($(".expert-productForm-group__error").eq(0).hasclass('error')){
+            $(".expert-productForm-group__error").eq(0).focus();
             ck=false;
         }
-        else if($(".expert-form-group__error").eq(1).hasclass('error')) {
-            $(".expert-form-group__error").eq(1).focus();
+        else if($(".expert-productForm-group__error").eq(1).hasclass('error')) {
+            $(".expert-productForm-group__error").eq(1).focus();
             ck=false
         }
         else {
