--- a/src/main/resources/static/css/admin/board.css
+++ b/src/main/resources/static/css/admin/board.css
@@ -19,32 +19,11 @@ div.wrap {
 }
 
 
-div.header {
-	min-width:100%;
-	height:60px;
-	display:flex;
-	box-shadow:1px 1px 5px #c4c4c4;
-	background:white;
-	position:relative;
-}
 
 
-div.logoImage {
-	width:15%;
-	height:100%;
-	background-color:bule;
 
 
-	position:relative;
 
-}
-
-
-div.logoImage a>img {
-    position: absolute;
-    top: -5px;
-    left: 25px;
-}
 
 
 div.title {
@@ -335,27 +314,33 @@ table tr.tableTh td {
 .register-detail-btn{
 	font-size: 12px;
 	background-color: white;
-	border: 1px solid #bcbcbc;
-	border-radius: 3px;
 	width: 50px;
-	cursor : pointer;
+	cursor: pointer;
+	border-bottom: 1px solid black;
+}
+
+.register-estimate-btn{
+	font-size: 12px;
+	background-color: white;
+	width: 50px;
+	cursor: pointer;
+	border-bottom: 1px solid red;
+	color: red;
 }
 
 .update_btn{
 	font-size: 12px;
 	background-color: white;
-	border: 1px solid #bcbcbc;
-	border-radius: 3px;
 	width: 50px;
-	cursor : pointer;
+	cursor: pointer;
+	border-bottom: 1px solid black;
 }
 .response-btn{
 	font-size: 12px;
 	background-color: white;
-	border: 1px solid #bcbcbc;
-	border-radius: 3px;
 	width: 50px;
-	cursor : pointer;
+	cursor: pointer;
+	border-bottom: 1px solid black;
 }
 
 
