--- a/src/main/resources/static/css/admin/side-nav.css
+++ b/src/main/resources/static/css/admin/side-nav.css
@@ -30,17 +30,26 @@ div.header {
 
 
 div.logoImage {
-	width:15%;
+	width:12%;
 	height:100%;
 	position:relative;
 }
 
 
-div.logoImage a>img {
-    position: absolute;
-    top: -5px;
-    left: 25px;
+div.logoImage a{
+	display: block;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+
 }
+
+div.logoImage a >img{
+	width: 50%;
+	height: 90%;
+	padding-top: 2px ;
+}
+
 
 
 div.title {
@@ -77,7 +86,7 @@ section.mainContainer {
 }
 
 nav {
-	width:15%;
+	width:12%;
 	height:855px;
 	background-color: white;
 	display:inline-block;
