--- a/src/main/resources/templates/admin/floging-detail.html
+++ b/src/main/resources/templates/admin/floging-detail.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <div class="header">
         <div class="logoImage">
-            <a href="#"><img src="#" style="width:158px;"></a>
+            <a href="#"><img src="../../static/image/logo.png"></a>
         </div>
         <div class="title">
             <div>
@@ -50,7 +50,7 @@
             <div class="content-wrap">
 
                 <!-- [S] 공지사항 등록 -->
-                <form action="./floging.html" method="post">
+                <form action="./floging.html" method="post" class="estimate-form">
                     <div class="con-write-wrap">
                         <div class="notice-write">
                             <div class="write-title">플로깅 제목</div>
@@ -77,35 +77,35 @@
                             </div>
                         </div>
                         <div class="notice-write">
-                            <div class="write-title">시작위치</div>
+                            <div class="write-title">시작위치~종료위치</div>
                             <div class="write-sec">
                                 <input class="write-text write-input" type="text" readonly>
                             </div>
                         </div>
                         <div class="notice-write">
-                            <div class="write-title">종료위치</div>
+                            <div class="write-title">최대 인원</div>
                             <div class="write-sec">
                                 <input class="write-text write-input" type="text" readonly>
                             </div>
                         </div>
                         <div class="notice-write">
-                            <div class="write-title">소요 시간</div>
+                            <div class="write-title">예상 소요 시간</div>
                             <div class="write-sec">
                                 <input class="write-text write-input" type="text" readonly>
                             </div>
                         </div>
                         <div class="notice-write">
-                            <div class="write-title">수락시 보상갯수</div>
+                            <div class="write-title input-title">보상갯수</div>
                             <div class="write-sec">
-                                <input class="write-text write-input" type="text" placeholder="플로깅 완료시 주어질 보상 갯수를 적어주세요">
+                                <input class="write-text write-input inputs" type="number" readonly>
                             </div>
                         </div>
 
 
                         <div class="notice-write">
-                            <div class="write-title">플로깅 거부 사유</div>
+                            <div class="write-title input-title">신청 거부 사유</div>
                             <div class="write-sec">
-                                <textarea style="height: 70px;" class="write-text write-notice" type="text" placeholder="플로깅 거부 사유를 적어주세요"></textarea>
+                                <textarea style="height: 70px;" class="write-text write-notice inputs" type="text" readonly></textarea>
                             </div>
                         </div>
 
@@ -117,8 +117,7 @@
                     <!-- 작성하기 btn -->
                     <div class="write-btn-wrap">
                         <button type="button" class="btn btn-list"><a href="./floging.html">플로깅 목록</a></button>
-                        <button type="submit" class="btn btn-write">신청 거부</button>
-                        <button type="button" class="btn btn-write"><a href="floging.html>"> 신청 수락</a></button>
+
                     </div>
                 </form>
 
@@ -136,6 +135,5 @@
 
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/admin/sumnail.js"></script>
 <script src="../../static/js/admin/side-bar.js"></script>
 </html>
