--- a/src/main/resources/templates/admin/qna-update.html
+++ b/src/main/resources/templates/admin/qna-update.html
@@ -78,7 +78,7 @@
                     <!-- 작성하기 btn -->
                     <div class="write-btn-wrap">
                         <button type="button" class="btn btn-list"><a href="./qna.html">문의목록</a></button>
-                        <button type="button" class="btn btn-write">답변하기</button>
+                        <button type="button" class="btn btn-write">수정하기</button>
                     </div>
                 </form>
 
