--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -10,6 +10,10 @@
     height: 100%;
     object-fit: cover;
 }
+/* 버튼 */
+.css-1dh3qvh{
+    display: block;
+}
 @media (min-width: 1256px){
     .css-139mcwb {
         max-width: 1256px;
@@ -170,7 +174,6 @@
     display: flex;
     -webkit-flex-wrap: nowrap;
     -moz-flex-wrap: nowrap;
-    -ms-flex-wrap: none;
     flex-wrap: nowrap;
     -webkit-box-align: stretch;
     -ms-flex-align: stretch;
@@ -189,23 +192,10 @@
     box-sizing: border-box;
 }
 .carousel__list__entry {
-    -moz-user-select: -moz-none;
     -khtml-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
-}
-.css-16je1n8 {
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    left: 0%;
-    -webkit-transition: opacity .2s ease-in-out;
-    transition: opacity .2s ease-in-out;
-    opacity: 0;
 }
 .css-16je1n8 {
     position: absolute;
@@ -229,6 +219,13 @@
     font-family: OhouseIcon;
     vertical-align: top;
 }
+/* <꺽쇠 */
+._chevron_left_24:before {
+    content: "\e966";
+}
+._chevron_right_24:before {
+    content: "\e96a";
+}
 .css-9ev8gz {
     position: absolute;
     top: 50%;
@@ -239,7 +236,7 @@
     left: 100%;
     -webkit-transition: opacity .2s ease-in-out;
     transition: opacity .2s ease-in-out;
-    opacity: 0;
+    opacity: 0.5;
 }
 .css-junuwq {
     padding: 4px 10px;
@@ -248,7 +245,6 @@
     border-radius: 13px;
     background-color: rgba(33, 38, 41, 0.5);
     font-weight: 700;
-    display: -webkit-inline-box;
     display: -webkit-inline-flex;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -270,6 +266,7 @@
     right: 12px;
     bottom: 12px;
 }
+
 .css-1k130iy::before {
     font-family: OhouseIcon;
     vertical-align: top;
@@ -293,7 +290,6 @@
     font: inherit;
     font-size: 16px;
     line-height: 20px;
-    display: -webkit-inline-box;
     display: -webkit-inline-flex;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -693,21 +689,9 @@ footer, header, main {
     position: relative;
     display: block;
 }
-@media (min-width: 1256px){
-    .css-1g8mxtn {
-        max-width: 1256px;
-        margin: 0px auto;
-        padding: 0px 60px;
-    }
-}
 @media (min-width: 1024px){
     .css-1g8mxtn {
         padding: 0px 60px;
-    }
-}
-@media (min-width: 768px){
-    .css-1obbfpy {
-        margin: 40px auto;
     }
 }
 .css-1g8mxtn {
@@ -945,4 +929,23 @@ fieldset, img {
 .css-ya1ij {
     display: inline-block;
     font-style: normal;
+}
+
+/*카테고리 */
+.category-1{
+    display: none;
+    height: 200px;
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+    position:relative
+    /*background-image: url("../../image/banner.png");*/
+}
+.img1{
+    background-size: cover;
+}
+.collect-1{
+    position: absolute;
+    top: 40%;
+    left: 40%;
 }
